--- a/config.org
+++ b/config.org
@@ -279,8 +279,8 @@ Uses terminal path.
 #+END_SRC
 ** Theme
 #+BEGIN_SRC emacs-lisp
-(defvar apex/dark-theme 'doom-one)
-(defvar apex/light-theme 'doom-one-light)
+(defvar apex/dark-theme 'doom-material)
+(defvar apex/light-theme 'doom-tomorrow-day)
 (defvar apex/current-theme apex/light-theme)
 (use-package doom-themes
   :init
@@ -866,14 +866,13 @@ _d_: Display error
   :config
   (setq lsp-ui-sideline-enable t
         lsp-ui-doc-enable nil
+        lsp-ui-sideline-show-diagnostics t
+        lsp-ui-sideline-show-code-actions t
         lsp-ui-sideline-show-hover t
-        lsp-ui-sideline-show-symbol t
-        lsp-ui-sideline-update-mode 'point
-        lsp-ui-sideline-show-code-actions t)
+        lsp-ui-sideline-update-mode 'point)
   (lsp-ui-peek-enable t)
   (define-key lsp-ui-mode-map [remap xref-find-definitions] #'lsp-ui-peek-find-definitions)
-  (define-key lsp-ui-mode-map [remap xref-find-references] #'lsp-ui-peek-find-references)
-  (lsp-ui-imenu-enable t))
+  (define-key lsp-ui-mode-map [remap xref-find-references] #'lsp-ui-peek-find-references))
 
 (use-package lsp-ivy
   :commands lsp-ivy-workspace-symbol)
